# Robotech-Remaster

./: .gitignore  README.md  pyproject.toml  requirements-asr.txt  requirements-clearvoice.txt  requirements-deepfilter.txt  requirements-inpaint.txt  requirements-llm.txt  requirements-repair-tool.txt  requirements-separation.txt  summarystarttimes.txt
config/: next_episode_summaries.json  reference_episode_chapters.json
config/episodes/: S01E01.json  S01E02.json  S01E03.json  S01E04.json  (+32 more)
docs/: architecture.md  asr-speech-map.md  audio-background-fill-notes.md  audio-repair-tool-proposal.md  audio-repair-tool-status.md  model-research.md  opening-end-credit-audio-rebuild.md  qwen3-tts-summary.md  s01e36-next-summary-reconstruction.md  setup.md  testing-workflow.md
scripts/: apply_subtitle_review_workbook.py  assemble_s01e36_next_summary.py  audio_gap_profile_fill.py  create_subtitle_bracket_review_workbook.py  opening_demucs_stem_algebra.py  opening_music_subtraction.py  opening_subtraction_calibration.py  prepare_opening_audio_rebuild_eval.py  prepare_s01e36_next_summary.py  prepare_s01e36_next_summary_segments.py  prepare_s01e36_next_summary_southern_cross_source.py  repair_spanish_subtitles.py  robotech-ai  run_apollo_restore.py  run_audiosep_dp_prompts.py  run_audiosep_prompts.py  run_clearvoice.py  run_flowsep_prompts.py  run_qwen3_tts_summary.py  run_s01e36_next_summary_video_tests.py  run_sam_audio_prompts.py  run_speech_map_asr.py  run_stable_audio_inpaint.py  run_subtitle_translation_hf.py  setup_audio_restoration_tools.sh  setup_s01e36_video_ai_tools.sh
(+25 files in other folders)
