[project]
name = "robotech-ai"
version = "0.1.0"
description = "Stepwise Robotech audio restoration workflow controller"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
robotech-ai = "robotech_ai.cli:main"
robotech-repair-tool = "robotech_ai_repair.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
